--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
     
       <div class="header__navigation">
-        <img class="header__menu" src="../images/icon-menu.svg" alt="">
-        <img class="header__logo" src="../images/logo.svg" alt="">
+        <img class="header__menu" src="images/icon-menu.svg" alt="">
+        <img class="header__logo" src="images/logo.svg" alt="">
 
         <nav class="navbar">
           <ul class="navbar__items">
@@ -44,23 +44,23 @@
       <div class="header__cart-avatar">
         <div class="header__cart">
           <div class="header__cart--notification">3</div>
-          <img  src="../images/icon-cart.svg" alt="">
+          <img  src="images/icon-cart.svg" alt="">
         </div>
-        <img class="header__avatar" src="../images/image-avatar.png" alt="">
+        <img class="header__avatar" src="images/image-avatar.png" alt="">
       </div>
     </header>
 
     <section class="content">
       <article class="gallery">
         <div class="gallery__image-container">
-          <img class="gallery__previus" src="../images/icon-previous.svg" alt="">
-          <img class="gallery__next" src="../images/icon-next.svg" alt="">
+          <img class="gallery__previus" src="images/icon-previous.svg" alt="">
+          <img class="gallery__next" src="images/icon-next.svg" alt="">
         </div>
         <div class="gallery__thumnails">
-          <img id="gt1" class="gallery__thumnail" src="../images/image-product-1-thumbnail.jpg" alt="">
-          <img id="gt2" class="gallery__thumnail" src="../images/image-product-2-thumbnail.jpg" alt="">
-          <img id="gt3" class="gallery__thumnail" src="../images/image-product-3-thumbnail.jpg" alt="">
-          <img id="gt4" class="gallery__thumnail" src="../images/image-product-4-thumbnail.jpg" alt="">
+          <img id="gt1" class="gallery__thumnail" src="images/image-product-1-thumbnail.jpg" alt="">
+          <img id="gt2" class="gallery__thumnail" src="images/image-product-2-thumbnail.jpg" alt="">
+          <img id="gt3" class="gallery__thumnail" src="images/image-product-3-thumbnail.jpg" alt="">
+          <img id="gt4" class="gallery__thumnail" src="images/image-product-4-thumbnail.jpg" alt="">
         </div>
       </article>
 
@@ -111,14 +111,14 @@
         <img class="modal-gallery__close" src="./images/icon-close.svg" alt="">
       </div>
      <div class="modal-gallery__image-container">
-       <img class="modal-gallery__previus" src="../images/icon-previous.svg" alt="">
-       <img class="modal-gallery__next" src="../images/icon-next.svg" alt="">
+       <img class="modal-gallery__previus" src="images/icon-previous.svg" alt="">
+       <img class="modal-gallery__next" src="images/icon-next.svg" alt="">
      </div>
      <div class="modal-gallery__thumnails">
-       <img id="mt1" class="modal-gallery__thumnail" src="../images/image-product-1-thumbnail.jpg" alt="">
-       <img id="mt2" class="modal-gallery__thumnail" src="../images/image-product-2-thumbnail.jpg" alt="">
-       <img id="mt3" class="modal-gallery__thumnail" src="../images/image-product-3-thumbnail.jpg" alt="">
-       <img id="mt4" class="modal-gallery__thumnail" src="../images/image-product-4-thumbnail.jpg" alt="">
+       <img id="mt1" class="modal-gallery__thumnail" src="images/image-product-1-thumbnail.jpg" alt="">
+       <img id="mt2" class="modal-gallery__thumnail" src="images/image-product-2-thumbnail.jpg" alt="">
+       <img id="mt3" class="modal-gallery__thumnail" src="images/image-product-3-thumbnail.jpg" alt="">
+       <img id="mt4" class="modal-gallery__thumnail" src="images/image-product-4-thumbnail.jpg" alt="">
      </div>
   </div>
  </article>
